[gd_scene load_steps=15 format=3 uid="uid://x0vso5387cf5"]

[ext_resource type="Script" path="res://src/gui/leader_board.gd" id="1_4plqa"]
[ext_resource type="Texture2D" uid="uid://16pst0a5xqn" path="res://assets/gfx/ui-elements/leaderboard-box.png" id="1_81uxs"]
[ext_resource type="Texture2D" uid="uid://b4b2aos5moj82" path="res://assets/gfx/ui-elements/granny.png" id="2_fcqlo"]
[ext_resource type="FontFile" uid="uid://bq8pv3ex6ljl6" path="res://assets/fonts/Heyho-Regular.ttf.otf" id="3_45s20"]
[ext_resource type="PackedScene" uid="uid://ubvcns0xn7a1" path="res://src/gui/leaderboard_row.tscn" id="5_vq03k"]
[ext_resource type="Texture2D" uid="uid://dwwc2uhalvtns" path="res://assets/gfx/ui-elements/box1.png" id="6_47r4h"]
[ext_resource type="Texture2D" uid="uid://dexxq6p5sdj5a" path="res://assets/gfx/ui-elements/box2.png" id="7_03saq"]

[sub_resource type="Theme" id="Theme_wwgry"]
default_font = ExtResource("3_45s20")
default_font_size = 48
Label/colors/font_color = Color(0.04, 0.0336, 0.03648, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_17suu"]
content_margin_left = 30.0
content_margin_top = 8.0
content_margin_right = 30.0
content_margin_bottom = 8.0
texture = ExtResource("6_47r4h")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_557si"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32g3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_geul8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hjafg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lmenb"]
content_margin_left = 80.0
content_margin_top = 40.0
content_margin_right = 80.0
content_margin_bottom = 30.0
texture = ExtResource("7_03saq")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="LeaderBoard" type="MarginContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4plqa")

[node name="Leaderboard" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Background" type="TextureRect" parent="Leaderboard"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_81uxs")

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard"]
layout_mode = 2
theme_override_constants/margin_left = 130
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 130
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_45s20")
theme_override_font_sizes/font_size = 180
text = "Leaderboard"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Leaderboard/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="LeaderboardContents" type="VBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_wwgry")

[node name="LeaderboardRow" parent="Leaderboard/MarginContainer/VBoxContainer/LeaderboardContents" instance=ExtResource("5_vq03k")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -160
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = -60

[node name="Granny" type="TextureRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_fcqlo")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 160
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 180

[node name="GrannyLabel" type="Label" parent="VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.04, 0.0336, 0.03648, 1)
theme_override_fonts/font = ExtResource("3_45s20")
theme_override_font_sizes/font_size = 48
text = "Good job!! Go on, tell us your name!"
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_17suu")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.04, 0.0336, 0.03648, 1)
theme_override_fonts/font = ExtResource("3_45s20")
theme_override_font_sizes/font_size = 92
theme_override_styles/focus = SubResource("StyleBoxEmpty_557si")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_32g3w")
theme_override_styles/normal = SubResource("StyleBoxEmpty_geul8")
placeholder_text = "player name"
max_length = 20
context_menu_enabled = false

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 155)
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_45s20")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_hjafg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/hover = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_lmenb")
theme_override_styles/normal = SubResource("StyleBoxTexture_lmenb")
text = "RETRY"

[connection signal="text_submitted" from="VBoxContainer/PanelContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
